--- a/clusters/docker-desktop/apps.yaml
+++ b/clusters/docker-desktop/apps.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-    - name: infra
+    - name: infra-gateway-resources
   interval: 1h
   retryInterval: 2m
   timeout: 5m
