--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,5 @@
 # Pre-commit hooks for Kubernetes and Helm projects
 # See https://pre-commit.com for more information
-
 repos:
   # General file checks
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -17,25 +16,13 @@ repos:
         name: Check for large files
       - id: check-merge-conflict
         name: Check for merge conflicts
-
-  # YAML linting
-  - repo: https://github.com/adrienverge/yamllint
-    rev: v1.37.1
+  - repo: https://github.com/google/yamlfmt
+    rev: v0.20.0
     hooks:
-      - id: yamllint
-        name: Lint YAML files
-        args: ['-c', '.yamllint.yaml']
-
-  # YAML formatting with Prettier
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v4.0.0-alpha.8
-    hooks:
-      - id: prettier
-        name: Format YAML with Prettier
-        types_or: [yaml]
-        args: ['--write', '--ignore-unknown']
-
-  # Helm chart validation
+      - id: yamlfmt
+        name: Format YAML with yamlfmt
+        command: yamlfmt
+        args: ['-exclude', 'clusters/docker-desktop/flux-system', '.']
   - repo: https://github.com/gruntwork-io/pre-commit
     rev: v0.1.30
     hooks:
