--- a/clusters/docker-desktop/infra.yaml
+++ b/clusters/docker-desktop/infra.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
@@ -11,7 +10,7 @@ spec:
   sourceRef:
     kind: ExternalArtifact
     name: infra
-  path: ./infra/gateway
+  path: ./gateway
   prune: true
   wait: true
 ---
@@ -29,6 +28,6 @@ spec:
   sourceRef:
     kind: ExternalArtifact
     name: infra
-  path: ./infra/gateway-resources
+  path: ./gateway-resources
   prune: true
   wait: true
