--- a/apps/app01/gw-route.yaml
+++ b/apps/app01/gw-route.yaml
@@ -14,6 +14,9 @@ spec:
     - name: envoy-gateway
       namespace: envoy-gateway-system
       port: 80
+    - name: envoy-gateway
+      namespace: envoy-gateway-system
+      port: 443
   rules:
     - matches:
         - path:
