--- a/apps/app01/np.yaml
+++ b/apps/app01/np.yaml
@@ -13,6 +13,8 @@ spec:
               app.kubernetes.io/component: system
       ports:
         - port: 80
-        - protocol: TCP
+          protocol: TCP
+        - port: 443
+          protocol: TCP
   policyTypes:
     - Ingress
