--- a/infra/cert-manager-resources/kustomization.yaml
+++ b/infra/cert-manager-resources/kustomization.yaml
@@ -1,6 +1,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: envoy-gateway-system
 resources:
-  - gateway.yaml
-  - redirect-policy.yaml
+  - clusterissuer.yaml
+  - gateway-certificate.yaml
