--- a/infra/gateway-resources/redirect-policy.yaml
+++ b/infra/gateway-resources/redirect-policy.yaml
@@ -4,7 +4,7 @@ metadata:
   name: http-to-https-redirect
   namespace: envoy-gateway-system
   labels:
-    app.kubernetes.io/component: system
+    app.kubernetes.io/component: application
 spec:
   parentRefs:
     - name: envoy-gateway
