--- a/apps/app01/np.yaml
+++ b/apps/app01/np.yaml
@@ -9,7 +9,7 @@ spec:
     - from:
         - namespaceSelector:
             matchLabels:
-              app.kubernetes.io/name: envoy-gateway
+              app.kubernetes.io/name: egw
               app.kubernetes.io/component: system
       ports:
         - port: 80
