--- a/infra/cert-manager-resources/gateway-certificate.yaml
+++ b/infra/cert-manager-resources/gateway-certificate.yaml
@@ -1,8 +1,8 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: envoy-gateway-wildcard
-  namespace: envoy-gateway-system
+  name: egw-wildcard
+  namespace: gw-system
 spec:
   secretName: gateway-wildcard-tls
   duration: 2160h # 90d
