--- a/infra/gateway-resources/gateway.yaml
+++ b/infra/gateway-resources/gateway.yaml
@@ -1,10 +1,10 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: envoy-gateway
-  namespace: envoy-gateway-system
+  name: egw
+  namespace: gw-system
 spec:
-  gatewayClassName: envoy-gateway
+  gatewayClassName: egw
   listeners:
     - name: http
       protocol: HTTP
