--- a/infra/gateway-resources/redirect-policy.yaml
+++ b/infra/gateway-resources/redirect-policy.yaml
@@ -2,13 +2,13 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: http-to-https-redirect
-  namespace: envoy-gateway-system
+  namespace: gw-system
   labels:
     app.kubernetes.io/component: application
 spec:
   parentRefs:
-    - name: envoy-gateway
-      namespace: envoy-gateway-system
+    - name: egw
+      namespace: gw-system
       sectionName: http
   rules:
     - filters:
