--- a/infra/gateway/helmrelease.yaml
+++ b/infra/gateway/helmrelease.yaml
@@ -1,8 +1,8 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: envoy-gateway
-  namespace: envoy-gateway-system
+  name: egw-controller
+  namespace: gw-system
 spec:
   interval: 5m
   timeout: 10m
@@ -12,8 +12,8 @@ spec:
       version: v1.6.0
       sourceRef:
         kind: HelmRepository
-        name: envoy-gateway
-        namespace: envoy-gateway-system
+        name: egw-controller
+        namespace: gw-system
   install:
     createNamespace: false
     crds: CreateReplace
@@ -28,8 +28,8 @@ spec:
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: envoy-gateway
-  namespace: envoy-gateway-system
+  name: egw-controller
+  namespace: gw-system
 spec:
   type: oci
   interval: 1h
