--- a/infra/gateway/namespace.yaml
+++ b/infra/gateway/namespace.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: envoy-gateway-system
+  name: gw-system
   labels:
-    app.kubernetes.io/name: envoy-gateway
+    app.kubernetes.io/name: egw
     app.kubernetes.io/component: system
