--- a/apps/app01/deployment.yaml
+++ b/apps/app01/deployment.yaml
@@ -62,6 +62,15 @@ spec:
         runAsUser: 1001
         runAsGroup: 1001
         fsGroup: 1001
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 100
+              podAffinityTerm:
+                labelSelector:
+                  matchLabels:
+                    app.kubernetes.io/name: httpbin
+                topologyKey: kubernetes.io/hostname
       topologySpreadConstraints:
         - maxSkew: 1
           topologyKey: 'kubernetes.io/hostname'
