--- a/apps/app01/deployment.yaml
+++ b/apps/app01/deployment.yaml
@@ -77,4 +77,4 @@ spec:
           whenUnsatisfiable: ScheduleAnyway
           labelSelector:
             matchLabels:
-              app: httpbin
+              app.kubernetes.io/name: httpbin
