--- a/infra/gateway-resources/gateway.yaml
+++ b/infra/gateway-resources/gateway.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: egw
+  name: envoy-gateway
   namespace: gw-system
 spec:
   gatewayClassName: egw
