feature: added vm stack

--- a/apps/app01/gw-route.yaml
+++ b/apps/app01/gw-route.yaml
@@ -10,7 +10,7 @@ spec:
   hostnames:
     - 'app01.localhost'
   parentRefs:
-    - name: egw
+    - name: envoy-gateway
       namespace: gw-system
   rules:
     - matches:
