--- a/clusters/docker-desktop/infra.yaml
+++ b/clusters/docker-desktop/infra.yaml
@@ -66,3 +66,19 @@ spec:
   path: ./gateway-resources
   prune: true
   wait: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: infra-monitoring
+  namespace: flux-system
+spec:
+  interval: 10m
+  retryInterval: 2m
+  timeout: 10m
+  sourceRef:
+    kind: ExternalArtifact
+    name: infra
+  path: ./monitoring
+  prune: true
+  wait: true
