--- a/infra/gateway-resources/redirect-policy.yaml
+++ b/infra/gateway-resources/redirect-policy.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/component: application
 spec:
   parentRefs:
-    - name: egw
+    - name: envoy-gateway
       namespace: gw-system
       sectionName: http
   rules:
