--- a/clusters/docker-desktop/infra.yaml
+++ b/clusters/docker-desktop/infra.yaml
@@ -33,11 +33,31 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: infra-networkpolicies
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: infra-cert-manager
+    - name: infra-monitoring
+  interval: 10m
+  retryInterval: 2m
+  timeout: 5m
+  sourceRef:
+    kind: ExternalArtifact
+    name: infra
+  path: ./networkpolicies
+  prune: true
+  wait: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: infra-cert-manager-resources
   namespace: flux-system
 spec:
   dependsOn:
     - name: infra-cert-manager
+    - name: infra-networkpolicies
   interval: 10m
   retryInterval: 2m
   timeout: 5m
@@ -57,6 +77,7 @@ spec:
   dependsOn:
     - name: infra
     - name: infra-cert-manager-resources
+    - name: infra-networkpolicies
   interval: 10m
   retryInterval: 2m
   timeout: 5m
