--- a/infra/gateway-resources/gateway.yaml
+++ b/infra/gateway-resources/gateway.yaml
@@ -20,8 +20,12 @@ spec:
         namespaces:
           from: Selector
           selector:
-            matchLabels:
-              app.kubernetes.io/component: application
+            matchExpressions:
+              - key: app.kubernetes.io/component
+                operator: In
+                values:
+                  - application
+                  - system
     - name: https
       protocol: HTTPS
       port: 443
