fixed healthcheck np

--- a/apps/app01/np.yaml
+++ b/apps/app01/np.yaml
@@ -15,6 +15,10 @@ spec:
     - Ingress
     - Egress
   ingress:
+    # Allow healthchecks
+    - from:
+        - ipBlock:
+            cidr: 10.42.0.0/16
     # Allow from Envoy Gateway proxy pods only
     - from:
         - namespaceSelector:
