--- a/infra/networkpolicies/vm-system-netpols.yaml
+++ b/infra/networkpolicies/vm-system-netpols.yaml
@@ -86,6 +86,17 @@ spec:
       ports:
         - protocol: TCP
           port: 8429
+          # Allow from Envoy Gateway proxy pods only
+    - from:
+        - namespaceSelector:
+            matchLabels:
+              app.kubernetes.io/name: egw
+          podSelector:
+            matchLabels:
+              app.kubernetes.io/component: proxy
+      ports:
+        - protocol: TCP
+          port: 8429
   egress:
     # Allow DNS
     - to:
