--- a/infra/monitoring/vm-values.yaml
+++ b/infra/monitoring/vm-values.yaml
@@ -81,17 +81,14 @@ vmalert:
 # Grafana for visualization
 grafana:
   enabled: true
+  # Disable sidecar datasource provisioning to avoid conflicts
   sidecar:
     dashboards:
       enabled: true
       searchNamespace: ALL
     datasources:
-      enabled: true
-      defaultDatasourceEnabled: false
-      # Prevent helm from creating default datasource provisioning
-      dashboards:
-        defaultDashboardsEnabled: false
-  # Explicitly configure VictoriaMetrics datasource
+      enabled: false # Disable sidecar to prevent auto-generated datasources
+  # Explicitly configure ONLY VictoriaMetrics datasource
   datasources:
     datasources.yaml:
       apiVersion: 1
