--- a/infra/monitoring/vm-values.yaml
+++ b/infra/monitoring/vm-values.yaml
@@ -98,9 +98,12 @@ grafana:
           access: proxy
           url: http://vmsingle-victoria-metrics-k8s-stack.vm-system.svc:8428
           isDefault: true
-          editable: false
+          editable: true
           jsonData:
             timeInterval: 30s
+      deleteDatasources:
+        - name: Prometheus
+          orgId: 1
   resources:
     requests:
       cpu: 10m
