--- a/infra/gateway-resources/kustomization.yaml
+++ b/infra/gateway-resources/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: gw-system
 resources:
-  - gotk-components.yaml
-  - gotk-sync.yaml
+  - gateway.yaml
+  - redirect-policy.yaml
