--- a/clusters/docker-desktop/flux-system/gotk-sync.yaml
+++ b/clusters/docker-desktop/flux-system/gotk-sync.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   interval: 1m0s
   ref:
-    branch: main
+    branch: addons
   secretRef:
     name: flux-system
   url: ssh://git@github.com/akafrmn/ti-httpbin
