--- a/clusters/docker-desktop/infra.yaml
+++ b/clusters/docker-desktop/infra.yaml
@@ -4,8 +4,8 @@ metadata:
   name: infra
   namespace: flux-system
 spec:
-  interval: 1h
-  retryInterval: 2m
+  interval: 5m
+  retryInterval: 1m
   timeout: 5m
   sourceRef:
     kind: ExternalArtifact
@@ -20,8 +20,8 @@ metadata:
   name: infra-cert-manager
   namespace: flux-system
 spec:
-  interval: 10m
-  retryInterval: 2m
+  interval: 5m
+  retryInterval: 1m
   timeout: 5m
   sourceRef:
     kind: ExternalArtifact
@@ -38,9 +38,8 @@ metadata:
 spec:
   dependsOn:
     - name: infra-cert-manager
-    - name: infra-monitoring
-  interval: 10m
-  retryInterval: 2m
+  interval: 5m
+  retryInterval: 1m
   timeout: 5m
   sourceRef:
     kind: ExternalArtifact
@@ -57,10 +56,9 @@ metadata:
 spec:
   dependsOn:
     - name: infra-cert-manager
-    - name: infra-networkpolicies
-  interval: 10m
-  retryInterval: 2m
-  timeout: 5m
+  interval: 5m
+  retryInterval: 1m
+  timeout: 3m
   sourceRef:
     kind: ExternalArtifact
     name: infra
@@ -78,9 +76,9 @@ spec:
     - name: infra
     - name: infra-cert-manager-resources
     - name: infra-networkpolicies
-  interval: 10m
-  retryInterval: 2m
-  timeout: 5m
+  interval: 5m
+  retryInterval: 1m
+  timeout: 3m
   sourceRef:
     kind: ExternalArtifact
     name: infra
@@ -94,12 +92,12 @@ metadata:
   name: infra-monitoring
   namespace: flux-system
 spec:
-  interval: 10m
-  retryInterval: 2m
+  interval: 5m
+  retryInterval: 1m
   timeout: 10m
   sourceRef:
     kind: ExternalArtifact
     name: infra
   path: ./monitoring
   prune: true
-  wait: true
+  wait: false
